Tue Aug 25 23:57:12 1998  Jeffrey A Law  (law@cygnus.com)

	* From Alexandre:
	* configure.in: Do not set thread_file to "irix" since no such
	support exists yet.

	* sparc.md (float abs/neg splits): Check reload_completed before
	calling alter_subreg.

Tue Aug 25 19:17:59 1998  David S. Miller  <davem@pierdol.cobaltmicro.com>

	* config/sparc/sparc.c (sparc_absnegfloat_split_legitimate): New
	function.
	* config/sparc/sparc.h: Declare it.
	* config/sparc/sparc.md (float abs/neg splits): Use it.
	(all other splits): Handle SUBREGs properly where necessary.
	(unnamed (1<<x)-1 V8PLUS pattern): Disable for now.

Tue Aug 25 19:48:46 1998  Jeffrey A Law  (law@cygnus.com)

	* reorg.c (fill_simple_delay_slots): Do not abort if we encounter
	an insn on the unfilled_slots_list that has no delay slots.
	(fill_eager_delay_slots): Similarly.

Tue Aug 25 13:35:20 1998  Nick Clifton  <nickc@cygnus.com>

	* config/v850/v850.c (movsi_source_operand): Treat CONSTANT_P_RTX
	as an ordinary operand.

Tue Aug 25 12:54:57 1998  Jason Merrill  <jason@yorick.cygnus.com>

	* tree.c (valid_machine_attribute): Don't apply attributes to both
	decl and type.

Tue Aug 25 12:23:20 PDT 1998  Richard Henderson  <rth@cygnus.com>

        * reload.c (operands_match_p): Handle rtvecs.

        * i386.c (legitimate_pic_address_disp_p): New.
        (legitimate_address_p): Use it.
        (legitimize_pic_address): Use unspecs to represent @GOT and @GOTOFF.
        Handle constant pool symbols just like statics.
        (emit_pic_move): Use Pmode not SImode for clarity.
        (output_pic_addr_const) [SYMBOL_REF]: Remove @GOT and @GOTOFF hacks.
        [UNSPEC]: New, handling what we killed above.
        [PLUS]: Detect and abort on invalid symbol arithmetic.
        * i386.h (CONSTANT_ADDRESS_P): Remove HIGH.

Tue Aug 25 12:02:23 1998  Mark Mitchell  <mark@markmitchell.com>

	* alias.c: Include output.h.
	(DIFFERENT_ALIAS_SETS_P): Don't treat alias sets as
	different if we're in a varargs function.